# plant-monitor

./: Cargo.toml  README.md  Trunk.toml  plants.db
client/: Cargo.toml  Trunk.toml  index.css  index.html  plant-monitor-client.service  run
client/src/: main.rs
messages/: Cargo.toml
messages/src/: lib.rs
server/: .gitignore  Cargo.toml  plant-monitor-server.service  plants.db  run
server/src/: handlers.rs  main.rs
src/client/: index.html
