[package]
name = "plant-monitor-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# cargo build trunk

[dependencies]
yew = "0.19"
serde = "1.0.145"
warp = {version = "0.3.3", optional = true}
reqwest = "0.11.12"
wasm-bindgen = "0.2.51"
wasm-bindgen-futures = "0.4.1"
log = "0.4.6"
wasm-logger = "0.2.0"