[package]
name = "plant-monitor-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# cargo build trunk

[dependencies]
serde = "1.0.145"
tokio = { version = "1", features = ["full"]}
warp = {version = "0.3.3"}
chrono = "0.4.23"
sqlite = "0.30.3"
messages = { path = "../messages" }
futures-util = "0.3"
bytes = "1"
image = "0.24.5"
